# esp32-music-server

actual/: Cargo.toml
actual/src/: _main.rs  event_handler.rs  http_task.rs  main.rs  router.rs  types.rs
development/: Cargo.toml
development/src/: main.rs
file_manager/: Cargo.toml
file_manager/src/: consts.rs  embassy_impl.rs  lib.rs  tokio_impl.rs
file_manager/src/runtime/: embassy_rt.rs  mod.rs  tokio_rt.rs
server/: Cargo.toml
server/src/: chunk.rs  chunk_receiver.rs  chunks.rs  delete.rs  embassy_impl.rs  file_uploader.rs  fs.rs  lib.rs  list.rs  range.rs  statics.rs  tokio_impl.rs  upload.rs
server/src/htm/: dir_page.htm  file_page.htm  list.htm
server/src/html/: music_list.html
